NLP TP/texts/robotics/robotics.stackexchange_0000073848.txt
Q:

Compiler errors while making rgbdslam on Nvidia Jetson TK1

The previous memory problems while were solved after enabling a swap file on jetson's storage and tried with "catkin_make" command. But again en counted with following errors
[ 54%] Building CXX object rgbdslam_v2-indigo/CMakeFiles/rgbdslam.dir/src/node.cpp.o
In file included from /usr/include/GL/freeglut_std.h:128:0,
                 from /usr/include/GL/glut.h:17,
                 from /home/ubuntu/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/glviewer.cpp:24:
/usr/include/GL/gl.h:138:17: error: conflicting declaration 'typedef double GLdouble'
 typedef double  GLdouble; /* double precision float */
                 ^
In file included from /usr/include/qt4/QtOpenGL/QtOpenGL:5:0,
                 from /home/ubuntu/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/glviewer.cpp:22:
/usr/include/qt4/QtOpenGL/qgl.h:85:17: error: 'GLdouble' has a previous declaration as 'typedef GLfloat GLdouble'
 typedef GLfloat GLdouble;
                 ^
In file included from /usr/include/GL/gl.h:2059:0,
                 from /usr/include/GL/freeglut_std.h:128,
                 from /usr/include/GL/glut.h:17,
                 from /home/ubuntu/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/glviewer.cpp:24:
/usr/include/GL/glext.h:468:19: error: conflicting declaration 'typedef ptrdiff_t GLsizeiptr'
 typedef ptrdiff_t GLsizeiptr;
                   ^
In file included from /usr/include/qt4/QtOpenGL/qgl.h:79:0,
                 from /usr/include/qt4/QtOpenGL/QtOpenGL:5,
                 from /home/ubuntu/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/glviewer.cpp:22:
/usr/include/GLES2/gl2.h:69:25: error: 'GLsizeiptr' has a previous declaration as 'typedef khronos_ssize_t GLsizeiptr'
 typedef khronos_ssize_t GLsizeiptr;
                         ^
In file included from /usr/include/GL/gl.h:2059:0,
                 from /usr/include/GL/freeglut_std.h:128,
                 from /usr/include/GL/glut.h:17,
                 from /home/ubuntu/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/glviewer.cpp:24:
/usr/include/GL/glext.h:469:19: error: conflicting declaration 'typedef ptrdiff_t GLintptr'
 typedef ptrdiff_t GLintptr;
                   ^
In file included from /usr/include/qt4/QtOpenGL/qgl.h:79:0,
                 from /usr/include/qt4/QtOpenGL/QtOpenGL:5,
                 from /home/ubuntu/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/glviewer.cpp:22:
/usr/include/GLES2/gl2.h:70:26: error: 'GLintptr' has a previous declaration as 'typedef khronos_intptr_t GLintptr'
 typedef khronos_intptr_t GLintptr;
                          ^
make[2]: *** [rgbdslam_v2-indigo/CMakeFiles/rgbdslam.dir/src/glviewer.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [rgbdslam_v2-indigo/CMakeFiles/rgbdslam.dir/all] Error 2
make: *** [all] Error 2
make: INTERNAL: Exiting with 5 jobserver tokens available; should be 4!
Invoking "make -j4 -l4" failed

Originally posted by Nirmala Madusanka on ROS Answers with karma: 3 on 2016-05-09
Post score: 0

Original comments
Comment by ahendrix on 2016-05-10:
A quick google search for "rgbdslam tk1" turns up https://github.com/felixendres/rgbdslam_v2/issues/17 and http://answers.ros.org/question/221799/rgbdslam_v2-on-tegra-tk1-build-error/ ; both of which look relevant.

A:

There's a conflict between the OpenGL type definitions. If you have some c++ skills, your best course of action would be to try and remove the 3D gui from the code. I can elaborate on this, if you are interested.

Originally posted by Felix Endres with karma: 6468 on 2016-05-12
This answer was ACCEPTED on the original site
Post score: 1

